fix overflowing text in card

--- a/assets/sass/material/_card.scss
+++ b/assets/sass/material/_card.scss
@@ -5,7 +5,9 @@
   box-shadow: map-get($card-elevation-shadow, shadow);
   display: flex;
   flex-direction: column;
+  min-width: 0;
   position: relative;
+  word-wrap: break-word;
   z-index: map-get($card-elevation-shadow, elevation);
 }
 
